1.13-Project-v0.7/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-todo-app
  template:
    metadata:
      labels:
        app: simple-todo-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: app-volume-claim
      securityContext:
        fsGroup: 1000
      containers:
        - name: simple-todo-app
          image: mickeckemi21/simple-todo-app:1.13
          volumeMounts:
            - name: shared-image
              mountPath: /usr/app/files
